added photo, updated about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/cv">CV</a>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/about">about</a>
+            <a href="{{ site.baseurl }}/cv">cv</a>
+            <a href="{{ site.baseurl }}/">blog</a>
+            <a href="{{ site.baseurl }}/photos">photos</a>
           </nav>
         </header>
       </div>
