--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/about">about</a>
             <a href="{{ site.baseurl }}/cv">cv</a>
-            <a href="{{ site.baseurl }}/">blog</a>
+            <a href="{{ site.baseurl }}/blog">blog</a>
             <a href="{{ site.baseurl }}/photos">photos</a>
           </nav>
         </header>
