--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 1000px;
   padding: 0 10px;
   width: 100%;
 }
@@ -166,7 +166,7 @@ img {
 .site-avatar {
   float: left;
   width: 70px;
-  height: 70px;
+  height: 100;
   margin-right: 15px;
 
   @include mobile {
