--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/blog">blog</a>
-            <a href="{{ site.baseurl }}/photos">photos</a>
+            <a href="{{ site.baseurl }}/blog">Research blog</a>
+            <a href="{{ site.baseurl }}/photos">Photos</a>
           </nav>
         </header>
       </div>
