--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
   </head>
 
   <body>
+    <div class="item">
+	  <div class="img-wrap">
+	    <img src=/images/jumbo_elk_cropped.png>
+	  </div>
+    </div>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -24,12 +29,11 @@
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
+	    <p>
             <a href="{{ site.baseurl }}/blog">Research blog</a>
+	    <p>
             <a href="{{ site.baseurl }}/photos">Photos</a>
-          </nav>
+          </div>
         </header>
       </div>
     </div>
