--- a/style.scss
+++ b/style.scss
@@ -153,6 +153,38 @@ img {
 .wrapper-masthead {
   margin-bottom: 50px;
 }
+body { background: #EFEFEF; }
+.item {
+  margin: 0 auto;
+  padding: 1em;
+  position: relative;
+  max-width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+.item .img-wrap:before {
+  content: '';
+  background-image: linear-gradient(to top, rgba(239,239,239,255), rgba(239,239,239,0));
+  position: absolute;
+  height: 50px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.item .img-wrap:after {
+  content: '';
+  display: block;
+  height: 9999px;
+}
+.img-wrap img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+  -ms-interpolation-mode: bicubic;
+}
 
 .masthead {
   padding: 20px 0;
@@ -212,11 +244,12 @@ img {
 }
 
 nav {
-  float: center;
-  margin-top: 23px; // @TODO: Vertically middle align
+  float: right;
+  margin-top: 20px; // @TODO: Vertically middle align
   margin-left: 0px; // @TODO: Vertically middle align
+  margin-right: 50px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
-  font-size: 18px;
+  font-size: 28px;
 
   @include mobile {
     float: none;
