--- a/css/main.css
+++ b/css/main.css
@@ -305,80 +305,61 @@ footer .theme-by {
     font-size: 16px;
   }
 }
-
-/* --- Post preview --- */
-
-.post-preview {
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
+.project {
+width: 125%;
+height: 250px;
+float: left;
+vertical-align: middle;
+padding: 0px;
+}
+.thumbnail{
+width: 100%;
+height: 230px;
+overflow: hidden;
+padding: 0;
+border: 0;
+border-radius: 0 !important;
+-webkit-border-radius: 0 !important;
+-moz-border-radius: 0 !important;
+}
+.thumbnail img {
+height: auto;
+position: relative;
+overflow: hidden;
+}
+.thumbnail a{
+float: left;
+position: relative;
+border-style: none;
+width: 90%;
+height: 230px;
+overflow: hidden;
+}
+.thumbnail a h1 {
+    font-size: 26px;
+}
+.thumbnail a span {
+display: inline;
+color: black;
+position: absolute;
+border-style: none;
+top: 0;
+left: 0;
+bottom: 0;
+right: 0;
+padding: 0px;
+text-align: center;
+}
+.thumbnail a:hover span {
+display: block;
+color: white;
+background: rgba(0, 0, 0, 0.2);
+}
+.blankbox{
+    background: gray;
 }
 
-@media only screen and (min-width: 768px) {
-  .post-preview {
-    padding: 35px 0;
-  }
-}
-
-.post-preview:last-child {
-  border-bottom: 0;
-}
-
-.post-preview a {
-  text-decoration: none;
-  color: #404040;
-}
-
-.post-preview a:focus,
-.post-preview a:hover {
-  text-decoration: none;
-  color: {{ site.hover-col }};
-}
-
-.post-preview .post-title {
-  font-size: 30px;
-  margin-top: 0;
-}
-.post-preview .post-subtitle {
-  margin: 0;
-  font-weight: 300;
-  margin-bottom: 10px;
-}
-.post-preview .post-meta,
-.post-heading .post-meta {
-  color: #808080;
-  font-size: 18px;
-  font-style: italic;
-  margin: 0 0 10px;
-}
-.post-preview .post-entry {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-.post-entry-container {
-  display: inline-block;
-  width: 100%;
-}
-.post-entry {
-  width: 100%;
-}
-.post-image {
-  float: right;
-  height: 192px;
-  width: 192px;
-  margin-top: -35px;
-  filter: grayscale(90%);
-}
-.post-image:hover {
-  filter: grayscale(0%);
-}
-.post-image img {
-  border-radius: 100px;
-  height: 192px;
-  width: 192px;
-}
-.post-preview .post-read-more {
-  font-weight: 800;
-}
-
+/*idk*/
 @media only screen and (min-width: 768px) {
   .post-preview .post-title {
     font-size: 36px;
